[package]
name = "my_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = "0.12.0"
rayon = "1.9.0"
static_aabb2d_index = "2.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
